# CppBaseLib

./: .gitignore  readme.txt
CVDevelop/: CMakeLists.txt
CVDevelop/gui/CVDevelopWidget/CVDevelopWidget/: CMakeLists.txt  CVDevelopWidget.cpp  CVDevelopWidget.h  CVDevelopWidget.ui  main.cpp
CVDevelop/gui/CVDevelopWidget/CVDevelopWidget/scripts/: build.bat
CVDevelop/include/: CppInterface2Lua.h  LuaDef.h  LuaEntries.hpp  LuaInterfaceDef.h  LuaMemOperate.hpp  LuaStack2Cpp.h  LuaStackIO.hpp
CVDevelop/scripts/: build.bat
CVDevelop/src/: CMakeLists.txt  luaExportTest.cpp
CVDevelop/unittests/: CMakeLists.txt  CallLua.cpp  LuaExport.cpp  LuaExport.lua  test.lua
CVDevelop/unittests/vstest/: CMakeLists.txt
Common/: CMakeLists.txt
Common/cmake/: CMakeLists.txt  CommonUnitTests.cmake
Common/include/: Complied.FunctionTraits.hpp  Complied.Macro.h  CompliedEntry.h  CompliedError.h  CompliedIndexer.h  GetSetDef.h  System.Action.hpp  System.Collections.Generic.LinkedList.hpp  System.Collections.Generic.List.hpp  System.Console.hpp  System.Convert.hpp  System.Data.DataTable.hpp  System.Data.IDataRecord.hpp  System.Data.IDbConnection.hpp  System.Data.Sqlite3.hpp  System.Data.Sqlite3DbCommand.hpp  System.Data.Sqlite3DbConnection.hpp  System.DateTime.hpp  System.Debug.Dmp.hpp  System.Debug.Dump.hpp  System.Debug.HardwareResources.hpp  System.Form.GL.hpp  System.Form.GlWidget2D.hpp  System.IDisposable.h  System.IEnumerator.h  System.INodeList.hpp  System.IO.Directory.hpp  System.IO.File.hpp  System.IO.FileStream.hpp  System.IO.FileStreamcpp.hpp  System.IO.Ini.hpp  System.IO.Json.hpp  System.IO.MemoryMappedFiles.hpp  System.IO.Stream.hpp  System.LinkList.hpp  System.List.hpp  System.Messaging.MessageQueue.hpp  System.Net.FtpWebRequest.hpp  System.Net.IPAddress.hpp  System.Net.Socket.hpp  (+32 more)
Common/include/Interface/: ICloneable.hpp  ICollection.hpp  IComparable.hpp  IDisposable.hpp  IEnumerable.hpp  IEnumerator.hpp  IEquatable.hpp  IList.hpp  IObservable.hpp  IObserver.hpp  IProgress.hpp  ISelfOffsetable.hpp  InterfaceDef.h
Common/resources/优化虚函数表/: benchmark.cpp
Common/scripts/: BuildThirdparty.bat  BuildUnits.bat  build.bat  debug.bat
Common/src/: System.Convert.hpp  System.DateTime.hpp  System.INodeList.hpp  System.IO.FileStream.hpp  System.IO.FireStream.hpp  System.IO.Ini.hpp  System.IO.Json.hpp  System.IO.MemoryMappedFiles.hpp  System.IO.Stream.hpp  System.LinkList.hpp  System.Net.FtpWebRequest.hpp  System.Net.Socket.hpp  System.Socket.hpp  System.Threading.Thread.hpp  System.Threading.hpp  System.Timers.Timer.hpp  complied_entry.h
Common/unittests/: CMakeLists.txt  System.Collections.Generic.LinkedList.Test.cpp  System.Console.Test.cpp  System.Convert.Test.cpp  System.Data.Sqlite3.Test.cpp  System.Form.OpenGL.Test.cpp  System.IO.Directory.Test.cpp  System.IO.FileStream.Test.cpp  System.IO.Ini.Test.cpp  System.IO.MemoryMappedFiles.Recv.Test.cpp  System.IO.MemoryMappedFiles.Send.Test.cpp  System.LinkList.Test.cpp  System.List.Test.cpp  System.Messaging.MessageQueue.Test.cpp  System.Net.FtpWebRequest.Test.cpp  System.Net.IPAddress.Test.cpp  System.Net.Sockets.Socket.Test.cpp  System.Net.Sockets.SocketAsync.Test.cpp  System.Net.Sockets.Tcp.Test.cpp  System.Net.Sockets.Udp.Test.cpp  System.Socket.Client.Tcp.Test.cpp  System.Socket.Server.Tcp.Test.cpp  System.Socket.Server.Test.cpp  System.Socket.Server.Udp.Unicast.Test.cpp  System.Socket.Tcp.Client.Test.cpp  System.Socket.Udp.Client.Broadcast.Test.cpp  System.Socket.Udp.Client.Multicast.Test.cpp  System.Socket.Udp.Client.Unicast.Test.cpp  System.Socket.Udp.Server.Test.cpp  System.Text.Json.Test.cpp  System.Threading.Barrier.Test.cpp  System.Threading.ReaderWriterLockSlim.Test.cpp  System.Threading.SpinLock.Test.cpp  System.Threading.Tasks.Task.Test.cpp  System.Threading.Thread.Test.cpp  System.Threading.ThreadPool.Test.cpp  System.Threading.Timer.Test.cpp  System.Threading.WaitHandle.Test.cpp  System.Threading.Watcher.Test.cpp  System.Xml.Test.cpp
Common/unittests/vstest/: CMakeLists.txt  IComparable.Test.cpp  IEnumerator.Test.cpp  IObserver.Test.cpp  ITEnumerator.Test.cpp  InterfaceTest.cpp
DirectShow/Sample/: CapMsgDef.h  Sample.cpp  Sample.sln  Sample.vcxproj  Sample.vcxproj.filters  avicapHelper.h
DirectShow/Sample/Debug/: Sample.exe.recipe  Sample.ilk  Sample.vcxproj.FileListAbsolute.txt  vc142.idb
Hardware/Sample/Sample/: Sample.cpp  Sample.sln  Sample.vcxproj  Sample.vcxproj.filters
ImageProcess/: CMakeLists.txt
ImageProcess/include/: ImageMat.hpp  Mat.hpp  Rle.hpp
ImageProcess/include/cv/: BmpImageIO.hpp  GdiImageIO.hpp  Image.hpp  ImageTransformation.hpp
ImageProcess/unittests/: BmpImageIO.Test.cpp  CMakeLists.txt  GdiImageIO.Test.cpp  ImageMat.Test.cpp  ImageTransformation.Test.cpp  Rle.Test.cpp
Learn/CppLearn/: CMakeLists.txt  CRTP.cpp  SFINAE.cpp  cast.cpp  multInheritation.cpp  objectLifetime.cpp  rvalueReference.cpp  test.cpp  threadtest.cpp  vftable.cpp
Learn/DataStructure/: CMakeLists.txt  PerfectBinaryTree.Test.cpp  PerfectBinaryTree.hpp  TreeNode.hpp
Learn/OpenHarmonyLearn/MyApplication/: agconnect-services.json
Learn/PluginFramework/: CMakeLists.txt
Learn/PluginFramework/include/: IPluginBase.h  IPluginDef.h  PluginController.hpp  PluginLoader.hpp
Learn/PluginFramework/sample/: CMakeLists.txt  PluginEntries.cpp  PluginUserDef.h
Learn/PluginFramework/sample/Plugin/: Filesystem.cpp  Filesystem.h
List/: List.h
Math/: CMakeLists.txt
Math/include/: Mat.hpp  Mat2dErosionDialation.hpp  Mat2dFFT.hpp  Mat2dHistogram.hpp  Mat2dMakeBorder.hpp  Mat2dRLE.hpp  Mat2dScala.hpp  Mat2dSharpen.hpp  Mat2dSmoothing.hpp  Mat2dThreshold.hpp  Mat2dTranspose.hpp  MatCaculate.hpp  MatTransformation.hpp  MathDef.hpp
Math/scripts/: build.bat
Math/unittests/: CMakeLists.txt  Mat2dErosionDialation.Test.cpp  Mat2dFFT.Test.cpp  Mat2dHistogram.Test.cpp  Mat2dMakeBorder.Test.cpp  Mat2dScala.Test.cpp  Mat2dSharpen.Test.cpp  Mat2dSmoothing.Test.cpp  Mat2dThreshold.Test.cpp  Mat2dTranspose.Test.cpp  MatCaculate.Test.cpp
MultiThread/Win32/MutiThread_Win32/: MutiThread_Win32.cpp  (+4 more)
SQL/SQLite/: test.bat
(+164 files in other folders)
