cmake_minimum_required(VERSION 3.0.0)
project(CppCommon VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
if (POLICY CMP0025)
  cmake_policy(SET CMP0025 NEW)
endif()
if (POLICY CMP0054)
  cmake_policy(SET CMP0054 NEW)
endif()
# 0. ‘§∂®“Â
set(RELEASE_PATH ../Build/bin)
set(Lib_Path ../Build/lib)
if     (CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_definitions(-D__LINUX)
elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
    add_definitions(-D__WINDOWS)
elseif (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
    add_definitions(-D__FREE_BSD)
else ()
    message(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
endif (CMAKE_SYSTEM_NAME MATCHES "Linux")
## ≈–∂œ±‡“Î∆˜
if     ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    if(CMAKE_CL_64)
        add_definitions(-DMSVC_64) 
        set(Path_Suffix x64)
    else()
        add_definitions(-DMSVC_32)
        set(Path_Suffix x86)
    endif()
endif()

# 1. …Ë÷√ ‰≥ˆ¬∑æ∂
set(RELEASE_PATH    bin/${Path_Suffix})
set(LIB_Path        lib/${Path_Suffix})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG 	../${RELEASE_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE 	../${RELEASE_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG 	../${LIB_Path})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RLEASE 	../${LIB_Path})

# 2.0 ±‡“Î»˝∑Ω“¿¿µ
add_subdirectory(thirdparty)
# 2.1 ±‡“Îµ•‘™≤‚ ‘
add_subdirectory(unittests)


