cmake_minimum_required(VERSION 3.0.0)
project(CppCommon VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)

add_definitions(-D__WINDOWS)
add_definitions(-DMSVC_64) 
add_definitions(-D_CRT_SECURE_NO_WARNINGS) 
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
include_directories(../../Common/include)
add_subdirectory(sample)
